changed splash screens and icons

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "doctor",
+    "name": "JnU Counselling Center(Doctor)",
     "slug": "healthapp",
     "version": "1.0.0",
     "orientation": "portrait",
